--- a/mealdb.html
+++ b/mealdb.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Meal DB</title>
+    <link rel="stylesheet" href="css/country.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,7 +15,7 @@
   </head>
 
   <body class="bg-info">
-    <h2 class="text-center my-5">The meal db</h2>
+    <h2 class="text-center my-5 text-white">The meal db</h2>
     <!-- search field -->
     <div class="input-group mb-3 mx-auto w-50">
       <input
@@ -25,6 +26,7 @@
         aria-label="Recipient's username"
         aria-describedby="button-addon2"
       />
+
       <button
         onclick="searchFood()"
         class="btn btn-outline-secondary"
@@ -34,6 +36,9 @@
         Search
       </button>
     </div>
+    <div class="bg"></div>
+    <!--  meal details -->
+    <div id="meal-details" class="w-50 mx-auto"></div>
     <!-- grid card -->
     <div id="search-result" class="row row-cols-1 row-cols-md-4 g-4"></div>
 
