--- a/mealdb.html
+++ b/mealdb.html
@@ -18,23 +18,32 @@
     <h2 class="text-center my-5 text-white">The meal db</h2>
     <!-- search field -->
     <div class="input-group mb-3 mx-auto w-50">
-      <input id="search-field" type="text"  class="form-control"  placeholder="Search your favourite food" aria-label="Recipient's username"
-      aria-describedby="button-addon2"
+      <input
+        id="search-field"
+        type="text"
+        class="form-control"
+        placeholder="Search your favourite food"
+        aria-label="Recipient's username"
+        aria-describedby="button-addon2"
       />
 
-      <button onclick="searchFood()" class="btn btn-outline-secondary" type="button"
-      id="button-search"> Search
+      <button
+        onclick="searchFood()"
+        class="btn btn-outline-secondary"
+        type="button"
+        id="button-search"
+      >
+        Search
       </button>
-      
     </div>
-    <div class="bg">
-    </div>
+
+    <div id="bg"></div>
+
+    <h2 id="error-message" class="w-50 mx-auto mt-4"></h2>
     <!--  meal details -->
-    <div id="meal-details" class="w-50 mx-auto">
-    </div>
+    <div id="meal-details" class="w-50 mx-auto"></div>
     <!-- grid card -->
-    <div id="search-result" class="row row-cols-1 row-cols-md-4 g-4">
-    </div>
+    <div id="search-result" class="row row-cols-1 row-cols-md-4 g-4"></div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
