format code and add container

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
 
-  <body class="bg-info">
+  <body class="bg-info container">
     <h2 class="text-center my-5 text-white">The meal db</h2>
     <!-- search field -->
     <div class="input-group mb-3 mx-auto w-50">
